src/objects/Deal_Item__c.object
<CustomObject>
    <description>Junction between deal and unit</description>
    <fields>
        <fullName>Accounting_Id__c</fullName>
        <label>Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Last_Sync_Time__c</fullName>
        <label>Accounting Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Accounting_Response__c</fullName>
        <label>Accounting Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Cash_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Actual Cash Value</description>
        <label>Actual Cash Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stamp_Duty_Calculators__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stamp Duty Calculators</label>
        <referenceTo>Stamp_Duty_Calculators__c</referenceTo>
        <relationshipLabel>Deals Items</relationshipLabel>
        <relationshipName>Deals_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dutiable_Value__c</fullName>
        <label>Dutiable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreed_Value_Taxable_Amount__c</fullName>
        <description>Agreed value after limiting sales tax amount on Trad in which is to ensure that the sales tax credit for the trades does not exceed the sales tax calculated on the units.</description>
        <label>Agreed Value Taxable Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreed_Value__c</fullName>
        <description>Agreed Value</description>
        <label>Agreed Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicable_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>Deals Items</relationshipLabel>
        <relationshipName>Deals_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appraisal_Method__c</fullName>
        <description>Appraisal Method</description>
        <label>Appraisal Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Visual</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appraisal_Notes__c</fullName>
        <description>Appraisal Notes</description>
        <label>Appraisal Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Appraisal_Status__c</fullName>
        <description>Appraisal Status</description>
        <label>Appraisal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Appraisal</fullName>
                </value>
                <value>
                    <fullName>Appraisal Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approved By</description>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deals_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Avail_For_QB_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Avail For QB Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_Price__c</fullName>
        <label>Base price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Deals Items</relationshipLabel>
        <relationshipName>Deals_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <description>Exterior Colour of unit</description>
        <label>Exterior Colour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Owned_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to cou</description>
        <label>Customer Owned Unit</label>
        <referenceTo>Customer_Owned_Unit__c</referenceTo>
        <relationshipLabel>Deal Items</relationshipLabel>
        <relationshipName>Deals_Units_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Sold__c</fullName>
        <formula>IF(ISPICKVAL(Deal__r.Status__c, &quot;Invoiced&quot;), Deal__r.Invoice_Number__r.Invoice_Date_Formula__c, TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Sold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to deal</description>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Deal Items</relationshipLabel>
        <relationshipName>Deal_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Option_Total__c</fullName>
        <label>Dealer Option Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Unit_Sales_Tax_Percentage__c</fullName>
        <label>Default Unit Sales Tax Percentage</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Markup_From_Prive_Level__c</fullName>
        <formula>Deal__r.CO_Header__r.Discount_Markup_From_Prive_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount-Markup From Prive Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Factory_Option_Total__c</fullName>
        <label>Factory Option Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Total__c</fullName>
        <label>Fee Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Total_Included_In_Profitability__c</fullName>
        <label>Fee Total Included In Profitability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is related to lien payout for Trade-Ins</description>
        <inlineHelpText>This is related to lien payout for Trade-Ins</inlineHelpText>
        <label>Finance Company (Lien Payout)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deals Items</relationshipLabel>
        <relationshipName>Deals_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Lock_In_Unit_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When enabled the dealer options which was created after unit selection on deal will not apply on the deal item.</description>
        <inlineHelpText>When enabled the dealer options which was created after unit selection on deal will not apply on the deal item.</inlineHelpText>
        <label>Is Lock In Unit Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Override_Stamp_Duty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Override Stamp Duty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Rideaway_Pricing_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rideaway Pricing Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Stocked_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is COU is stocked in</description>
        <label>Is Stocked In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labour_Rate_From_Price_Level__c</fullName>
        <formula>Deal__r.CO_Header__r.Labour_Rate_From_Price_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labour Rate From Price Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labour_Total__c</fullName>
        <label>Labour Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lien_Payout_Accounting_Id__c</fullName>
        <label>Lien Payout Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lien_Payout_Accounting_Last_Sync_Time__c</fullName>
        <label>Lien Payout Accounting Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lien_Payout_Accounting_Response__c</fullName>
        <label>Lien Payout Accounting Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lien_Payout_Avail_For_QB_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lien Payout Avail For QB Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lien_Payout_Avail_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lien Payout Avail For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lien_Payout_Sync_Token__c</fullName>
        <label>Lien Payout Sync Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lien_Payout_Xero_Accounting_Id__c</fullName>
        <label>Lien Payout Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lien_Payout__c</fullName>
        <label>Lien Payout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mileage_Type__c</fullName>
        <label>Mileage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Km</fullName>
                </value>
                <value>
                    <fullName>Mi</fullName>
                </value>
                <value>
                    <fullName>Hrs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_And_Fee_Status__c</fullName>
        <label>Option And Fee Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Uncommitted</fullName>
                </value>
                <value>
                    <fullName>Committed</fullName>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Fullfill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Product_Total__c</fullName>
        <label>Other Product Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Override_Tax_For_All_Line_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It can be checked only if Taxable flag is checked. If this flag is checked then ALL line items are taxed using tax selected for Applicable_Tax__c field (of course only if the item is taxable).</description>
        <inlineHelpText>It can be checked only if Taxable flag is checked. If this flag is checked then ALL line items are taxed using tax selected for Applicable_Tax__c field (of course only if the item is taxable).</inlineHelpText>
        <label>Override Tax For All Line Items?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_Price_Base_From_Price_Level__c</fullName>
        <formula>Deal__r.CO_Header__r.Part_Price_Base_From_Price_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Price Base From Price Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Total__c</fullName>
        <label>Part Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Agreed_Value__c</fullName>
        <formula>IF( $Setup.Configurations__c.Tax_Included_Pricing__c , ( Agreed_Value__c / ( 1 + Default_Unit_Sales_Tax_Percentage__c ) ), Agreed_Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Agreed Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Agreed_Value_ACV_Variance__c</fullName>
        <formula>Pre_Tax_Agreed_Value__c  -  Actual_Cash_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Agreed Value ACV Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <description>Used for Customer Invoice Detail grid search</description>
        <formula>IF( ISPICKVAL(Type__c, &apos;Trade In&apos;), -1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for Customer Invoice Detail grid search</inlineHelpText>
        <label>Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rideaway_Pricing_Total__c</fullName>
        <label>Rideaway Pricing Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stamp_Duty_Total__c</fullName>
        <label>Stamp Duty Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stocked_In_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stocked In Unit</label>
        <referenceTo>Customer_Owned_Unit__c</referenceTo>
        <relationshipLabel>Deals Items (Stocked In Unit)</relationshipLabel>
        <relationshipName>Deals_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Model</label>
        <referenceTo>Unit_Sub_Model__c</referenceTo>
        <relationshipLabel>Deals Items</relationshipLabel>
        <relationshipName>Deals_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sublet_Total__c</fullName>
        <label>Sublet Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Submodel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sub model of unit</description>
        <label>SubModel</label>
        <referenceTo>Unit_Model__c</referenceTo>
        <relationshipLabel>Deal Items (Submodel)</relationshipLabel>
        <relationshipName>Deal_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sync_Token__c</fullName>
        <label>Sync Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <formula>IF( $Setup.Configurations__c.Tax_Included_Pricing__c , ( Agreed_Value__c - ( Agreed_Value__c / ( 1 + Default_Unit_Sales_Tax_Percentage__c) ) ), Agreed_Value__c * Default_Unit_Sales_Tax_Percentage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>IF(ISPICKVAL(Type__c, &apos;Trade In&apos;), (Actual_Cash_Value__c * -1),  Unit_Cost__c +  Unit_Option_Cost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price_With_Tax__c</fullName>
        <formula>IF(ISPICKVAL(Type__c, &apos;Trade In&apos;), (Pre_Tax_Agreed_Value__c +  Tax_Amount__c)*-1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price With Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transfer_Plate_Reg_to_New_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Toggle which states whether or not the plate/reg should be transferred to the unit being purchased on the deal.</description>
        <inlineHelpText>Toggle which states whether or not the plate/reg should be transferred to the unit being purchased on the deal.</inlineHelpText>
        <label>Transfer Plate/Reg to New Unit ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transfer_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup of the unit to which Plate/Reg is to be transferred from the trade-in unit.</description>
        <inlineHelpText>Lookup of the unit to which Plate/Reg is to be transferred from the trade-in unit.</inlineHelpText>
        <label>Transfer To</label>
        <referenceTo>Customer_Owned_Unit__c</referenceTo>
        <relationshipLabel>Deals Items (Transfer To)</relationshipLabel>
        <relationshipName>Deals_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>IF( ISPICKVAL(Type__c, &apos;Trade In&apos;), (Pre_Tax_Agreed_Value__c* -1), Unit_Price__c + Unit_Option_Price__c)</formula>
    	<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price (Pre Tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Profit__c</fullName>
        <formula>Total_Price__c - Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trade In</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Make__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Make of unit</description>
        <label>Make</label>
        <referenceTo>Unit_Make__c</referenceTo>
        <relationshipLabel>Deal Items</relationshipLabel>
        <relationshipName>Deal_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Model of unit</description>
        <label>Model</label>
        <referenceTo>Unit_Model__c</referenceTo>
        <relationshipLabel>Deal Items</relationshipLabel>
        <relationshipName>Deal_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Option_Cost__c</fullName>
        <label>Unit Option Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Option_Price__c</fullName>
        <formula>IF( ISPICKVAL(Type__c, &apos;Unit&apos;), (Part_Total__c + Labour_Total__c + Sublet_Total__c + Fee_Total_Included_In_Profitability__c + Warranty_Product_Total__c + Other_Product_Total__c ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Option Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Option_Profit__c</fullName>
        <formula>Unit_Option_Price__c -  Unit_Option_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Option Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <formula>IF( ISPICKVAL(Type__c, &apos;Trade In&apos;), (Pre_Tax_Agreed_Value__c* -1), (Base_Price__c + Factory_Option_Total__c + Dealer_Option_Total__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Profit__c</fullName>
        <formula>Unit_Price__c -  Unit_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
    	<fullName>Unit_Status__c</fullName>
        <formula>
        IF(AND(ISPICKVAL(Type__c, &apos;Unit&apos;),ISBLANK(Customer_Owned_Unit__c)), &apos;Temporary&apos;,
        IF(ISPICKVAL(Type__c, &apos;Trade In&apos;), 
        IF(ISBLANK(Stocked_In_Unit__c), &apos;Not-stocked&apos;, &apos;Stocked-in&apos;),
        IF(Customer_Owned_Unit__r.Consignment__c, &apos;Consignment&apos;,
        IF(ISPICKVAL(Customer_Owned_Unit__r.Unit_Type__c, &apos;STOCK&apos;), TEXT(Customer_Owned_Unit__r.Status__c),
        IF(AND(ISPICKVAL(Customer_Owned_Unit__r.Unit_Type__c, &apos;ORDU&apos;), OR(ISPICKVAL(Customer_Owned_Unit__r.Status__c, &apos;Temporary&apos;), ISPICKVAL(Customer_Owned_Unit__r.Status__c, &apos;Required&apos;))), TEXT(Customer_Owned_Unit__r.Status__c),
        IF(ISPICKVAL(Customer_Owned_Unit__r.Unit_Type__c, &apos;ORDU&apos;), &apos;On Order&apos;,
        &apos;&apos;))))))</formula>
        <label>Unit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Tax_Applicable_On__c</fullName>
        <label>Unit Tax Applicable On</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Sublet</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>Warranty products</fullName>
                </value>
                <value>
                    <fullName>Other products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
    	<fullName>Unit_Type__c</fullName>
        <formula>IF(AND(ISPICKVAL(Type__c, &apos;Unit&apos;),ISBLANK(Customer_Owned_Unit__c)), &apos;Temporary unit&apos;, 
		IF(ISPICKVAL(Type__c, &apos;Trade In&apos;), &apos;Trade-in&apos;, 
		IF(Customer_Owned_Unit__r.Consignment__c, &apos;Consignment&apos;, 
		IF(ISPICKVAL(Customer_Owned_Unit__r.Unit_Type__c, &apos;STOCK&apos;), &apos;Stock unit&apos;, 
		IF(ISPICKVAL(Customer_Owned_Unit__r.Unit_Type__c, &apos;ORDU&apos;), &apos;Order unit&apos;, 
		&apos;&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
        <label>Unit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Product_Total__c</fullName>
        <label>Warranty Product Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id__c</fullName>
        <label>Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Model year of the unit</description>
        <label>Unit Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>    
    <label>Deal Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DI-{000000}</displayFormat>
        <label>Deal Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deals Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>